// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormDates props props "inner" 1`] = `
<div
  className="formDates"
>
  <h5
    className="formDates__title"
  >
    Title
  </h5>
  <div
    className="formDates__inner"
  >
     
  </div>
</div>
`;

exports[`FormDates render default render 1`] = `
<div
  className="formDates"
>
  <h5
    className="formDates__title"
  >
    Title
  </h5>
</div>
`;
